Feat: Added the Games endpoint for fetch and exploring menu updated the reviews api
